css/styles.css
/* ... */
/*
=============== 
Global Styles
===============
*/

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: var(--ff-secondary);
  background-image: var(--black-bg-image);
  color: var(--clr-white);
  line-height: 1.5;
  font-size: 0.875rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow-x: hidden;
}
.whole_body {
  -webkit-filter: blur(100px);
  filter: blur(100px);
}

html {
  overflow-x: hidden;
}
/* scroll track and bar styles */
::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: var(--scrollbarBG);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}
::-webkit-scrollbar-thumb {
  background-color: var(--thumb-bg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

body {
  scrollbar-width: thin;
  scrollbar-color: var(--thumb-bg) var(--scrollbarBG);
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
}
img:not(.nav-logo) {
  width: 100%;
  display: block;
}
.nav-header {
  transform-style: preserve-3d;
  padding: 0.5rem;
  box-shadow: var(--dark-shadow);
  margin-top: -10%;
  transition: var(--transition);
}
.nav-header:hover {
  box-shadow: 0px 0px 10px 0px rgba(193, 193, 193, 0.69);
  transition: var(--transition);
  transform-style: preserve-3d;
}
.nav-logo {
  width: 50px;
  border: 2px solid var(--clr-primary-1);
  background: transparent;
  border-radius: 50%;
  padding: 1px;
  cursor: pointer;
  transform-style: preserve-3d;
  transform: var(--level-one);
}

.nav-logo:hover {
  border: 3px solid var(--clr-primary-1);
  padding: 2px;
  transition: var(--transition);
  transform: scale(1.1);
}
.nav-header:active .nav-logo {
  transform: scale(1.2);
}

h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
  font-family: var(--ff-primary);
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.875rem;
}
p {
  margin-bottom: 1.25rem;
  color: var(--clr-grey-5);
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1rem;
  }
  body {
    font-size: 1rem;
    scroll-behavior: smooth;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}

.hide {
  visibility: hidden;
  display: none;
  transition: var(--transition);
}
/*  global classes */
/* ===========cookie alert======== */

.cookiealert {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: transparent;
  -webkit-backdrop-filter: blur(100px);
  color: var(--clr-white);
  backdrop-filter: blur(100px);
  box-shadow: inset 0px 2px 5px 4px rgba(0, 0, 0, 0.48);
}

/* ==========lean more and accept  cookie button psudo elements  */

.cookie_para,
.cookie_buttons {
  flex: 1;
}

.cookie_para p {
  color: rgb(173, 156, 156);
  font-size: 15px;
  letter-spacing: 2px;
  line-height: 1.5rem;
  opacity: 09;
  font-weight: 500;
}

.cookie_buttons a {
  border-radius: 0.4rem;
  text-decoration: none;
  transition: var(--transition);
  color: var(--clr-white);
  background: transparent;
  color: rgb(238, 57, 2);
  opacity: 0.7;
}

.cookie_buttons button {
  border-radius: 0.4rem;
  text-decoration: none;
  transition: var(--transition);
  color: var(--clr-white);
  background: transparent;
  opacity: 1;
}

.cookie_buttons button:hover {
  transition: 0.5s;
}
.acceptcookies {
  color: rgb(206, 111, 111) !important;
}
.cookie_buttons a:hover {
  color: var(--clr-white);
}

.icon-set {
  background-color: red;
}

.btn {
  text-transform: uppercase;
  background: transparent;
  color: var(--clr-white);
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  font-weight: 700;
  transition: var(--transition);
  font-size: 0.875rem;
  border: 2px solid transparent;
  cursor: pointer;
  box-shadow: var(--btn-shadow);
  outline: 1px solid var(--clr-white);
  outline-offset: 5px;
}
.btn:hover {
  color: var(--clr-primary-1);
  outline-offset: -2px;
  transition: var(--transition);
  background: var(--clr-white);
}
/* section */
.section {
  padding: 5rem 0;
  scroll-behavior: smooth;
}

.section-center {
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
  scroll-behavior: smooth;
}
@media screen and (min-width: 992px) {
  .section-center {
    width: 95vw;
  }
}
/* added during recording */
.underline {
  width: 5rem;
  height: 0.25rem;
  margin-bottom: 1.25rem;
  background: var(--clr-primary-5);
  margin-left: auto;
  margin-right: auto;
}
.section-title {
  margin-bottom: 4rem;
  text-align: center;
}
.bg-grey {
  background: var(--clr-grey-10);
}
/*
=============== 
Navbar
===============
*/
.nav-links {
  display: none;
}
.nav {
  height: 5rem;
  padding: 1rem;
  display: grid;
  align-items: center;
  transition: var(--transition);
  z-index: 100;
}
.nav-center {
  width: 100%;
  max-width: 1170px;
  margin: 0 auto;
}
.nav-header {
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
}
.nav-btn {
  background: transparent;
  border-color: transparent;
  color: var(--clr-white);
  font-size: 2rem;
  cursor: pointer;
  justify-self: end;
}
.nav-btn:active {
  transform: scale(1.1);
}
/* ... */

